--- a/m1-u5/tareas resueltas 5/tarea 2.html
+++ b/m1-u5/tareas resueltas 5/tarea 2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tarea 2.css">
+    <link rel="stylesheet" href="tarea2nuevo.css">
     <title>Document</title>
 
 </head>
@@ -13,7 +13,7 @@
 <textarea name="message" onkeyup="countChars(this);"></textarea>
 <p id="cajaNum">0 characters</p>
 
-<script src="tarea2.js" ></script>
+<script src="tarea2nuevo.js" ></script>
 
 </body>
 
