modificacion de index

--- a/maquetado benedetti/index.html
+++ b/maquetado benedetti/index.html
@@ -73,7 +73,7 @@
                                 src="img/AHUMADO.png"></a>PIZZAS</li>
 
                 </ul>
-            </div>
+            </div>  <!--cierre productos.-->
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
@@ -91,9 +91,7 @@
                 </div>
             </div>
 
-
-            <!--cierre nodales y arranca novedades.-->
-<!--cierre nodales y arranca novedades.-->
+<!--cierre nodales .-->
 
 <div class="col-md-3 my-3">
     <div class="rounded py-5 testimonios">
